# wukong

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  TODOLIST.md  init.sh  reset.sh
client/: .gitignore  .wk-config  setup.py
client/wk/: app.py  func.py  invoker.py  main.py  user.py
client/wk/utils/: auth.py  env.py
cmake/: ExternalProjects.cmake
docker/: base.dockerfile
function/: CMakeLists.txt
function/cpp/kingdo/test/hello/: CMakeLists.txt  main.cpp
function/cpp/kingdo/test/hello1/: CMakeLists.txt  main.cpp
function/cpp/kingdo/test/hello2/: CMakeLists.txt
function/cpp/kingdo/test/toupper/: CMakeLists.txt  main.cpp
function/cpp/kingdo/test/who/: CMakeLists.txt  main.cpp
function/python/fucntion/: py_hello.py  py_noop.py  py_toupper.py  py_who.py
function/python/wk-python/: setup.py
function/python/wk-python/wkpython/: core.py
include/faas/: function-interface.h
include/faas/cpp/: function-interface.h
include/faas/python/: function-interface.h
include/wukong/client/: client-server.h
include/wukong/endpoint/: endpoint.h  handler.h
include/wukong/proto/: proto.h
include/wukong/utils/: config.h  dl.h  env.h  errors.h  fsm.h  json.h  locks.h  log.h  macro.h  os.h  radom.h  redis.h  signal-tool.h  string-tool.h  struct.h  timer.h  timing.h  uuid.h
include/wukong/utils/cgroup/: CGroup.h  CGroupPool.h
include/wukong/utils/process/: DefaultSubProcess.h  Process.h  UVSubProcess.h  subProcess.h
include/wukong/utils/reactor/: Reactor.h
include/wukong/utils/shm/: ShareMemoryObject.h
src/cli/: .wk-config
src/cli/wk/: func.py  invoker.py  main.py
src/cli/wk/utils/: env.py  ping.py
src/common/: CMakeLists.txt
src/common/client/: CMakeLists.txt  client-server.cpp
src/common/endpoint/: CMakeLists.txt  default-handler.cpp  endpoint.cpp
src/common/proto/: CMakeLists.txt  proto.cpp  wukong.proto
src/common/utils/: config.cpp  dl.cpp  env.cpp  errors.cpp  json.cpp  locks.cpp  log.cpp  os.cpp  radom.cpp  redis.cpp  string-tool.cpp  struct.cpp  timer.cpp  timing.cpp  uuid.cpp
src/common/utils/cgroup/: CGroup.cpp  CGroupPool.cpp
src/common/utils/process/: DefaultSubProcess.cpp  Process.cpp  UVSubProcess.cpp  subProcess.cpp
src/common/utils/reactor/: Reactor.cpp
src/common/utils/shm/: ShareMemoryObject.cpp
src/endpoint/: CMakeLists.txt  endpoint.cpp  handler.cpp
src/faas/: CMakeLists.txt  function-interface.cpp
src/faas/cpp/: CMakeLists.txt  function-interface.cpp
src/faas/python/: CMakeLists.txt  function-interface.cpp
src/global-gateway/: CMakeLists.txt  LoadBalance.cpp  LoadBalance.h  endpoint.cpp  endpoint.h  gateway.cpp  global-gw-handler.cpp  global-gw-handler.h  handler.cpp  load-balance.cpp  load-balance.h  loadbloace.cpp  loadbloace.h  main.cpp
src/instance/: CMakeLists.txt
src/instance/function/: CMakeLists.txt  FunctionPool.cpp  FunctionPool.h  main.cpp
src/instance/function/common/: Agent.cpp  Agent.h  AgentHandler.cpp  AgentHandler.h  CMakeLists.txt
src/instance/function/storage-function/: CMakeLists.txt  StorageFuncAgent.cpp  StorageFuncAgent.h  main.cpp
src/instance/function/worker-function/: CMakeLists.txt  WorkerFuncAgent.cpp  WorkerFuncAgent.h  main.cpp
src/instance/local-gateway/: CMakeLists.txt  LocalGateway.cpp  LocalGateway.h  LocalGatewayClientServer.cpp  LocalGatewayClientServer.h  LocalGatewayEndpoint.cpp  LocalGatewayEndpoint.h  LocalGatewayHandler.cpp  macro.h  main.cpp
src/instance/storage-function/: CMakeLists.txt
src/instance/worker-function/: CMakeLists.txt
src/invoker/: CMakeLists.txt  invoker.cpp  invoker.h  invokerClientServer.cpp  invokerClientServer.h  invokerEndpoint.cpp  invokerEndpoint.h  main.cpp
src/invoker/instance-proxy/: CMakeLists.txt  InstanceProxy.cpp  InstanceProxy.h
src/invoker/instance-proxy/docker/: DockerInstanceProxy.cpp  DockerInstanceProxy.h
src/invoker/instance-proxy/firecracker/: CMakeLists.txt  FirecrackerInstanceProxy.cpp  FirecrackerInstanceProxy.h
src/invoker/instance-proxy/process/: CMakeLists.txt  ProcessInstanceProxy.cpp  ProcessInstanceProxy.h
src/utils/: CMakeLists.txt  config.cpp  env.cpp  log.cpp  os.cpp
tests/: CMakeLists.txt  dl.cpp  subProcess.cpp  test_cpp.cpp
tests/cgroup/: CGroup.cpp  CMakeLists.txt  sub-process.cpp
tests/json/: CMakeLists.txt  json.cpp
tests/local-gateway/: CMakeLists.txt  local-gateway-test.cpp
tests/named-pipe/: CMakeLists.txt  main.cpp
tests/python/: CMakeLists.txt  python.cpp  test.py
tests/python/py-source/: find_lib.py
tests/shm/: CMakeLists.txt  bounce.cpp  pshm_ucase.h  send.cpp
tests/uuid/: CMakeLists.txt  main.cpp
tool/: CMakeLists.txt  dl.cpp  hello_server.cpp  subProcess.cpp  test_cpp.cpp
tools/: CMakeLists.txt  cgroup.sh  clean-residual-process.sh  format.sh  hello_server.cpp  reset.sh  subProcess.cpp  test_cpp.cpp
